<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
 	 android:layout_height="fill_parent">

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivLogo"
        android:layout_marginTop="30dp"
        android:onClick="clicked"
        android:text="@string/btnConfig" />
    
    <Button
        android:id="@+id/btnStreams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnConfig"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="clicked"
        android:text="@string/btnStreams" />
    
    <Button
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnStreams"
        android:layout_marginTop="22dp"
        android:onClick="clicked"
        android:text="@string/btnMap" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/descLogo"
        android:onClick="clicked"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:text="@string/welcomeTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/btnMap"
		android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcomeInstructions"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/instructions1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instructions"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/instructions"
        android:layout_marginTop="10dp"
        android:text="@string/instruction1"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
	<TextView
        android:id="@+id/instructions2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instructions"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/instructions1"
        android:layout_marginTop="5dp"
        android:text="@string/instruction2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>

</ScrollView>