<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
 	 android:layout_height="fill_parent">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/configLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/configLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/title" />

    <TextView
        android:id="@+id/apikeyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/configLabel"
        android:layout_below="@+id/configLabel"
        android:layout_marginTop="20dp"
        android:text="@string/apikeyLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/changeApikey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/apikeyLabel"
        android:layout_alignBottom="@+id/apikeyLabel"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/apikeyLabel"
        android:text="@string/apikeyNumber" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newApikey"
        android:layout_marginTop="21dp"
        android:onClick="saveApikey"
        android:text="@string/btnSave" />
    
	<Button
        android:id="@+id/btnScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSave"
        android:layout_marginTop="21dp"
        android:onClick="scanApikey"
        android:text="@string/btnScan" />

    <EditText
        android:id="@+id/newApikey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/changeLabel"
        android:layout_toRightOf="@+id/configLabel"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/changeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSave"
        android:layout_below="@+id/changeApikey"
        android:layout_marginTop="44dp"
        android:text="@string/changeApikey"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>

</ScrollView>
